[metadata]
name = mdtex2html
version = 0.9.0
author = Dirk Winkel
author_email = it@polarwinkel.de
description = library to convert Markdown with included LaTeX-Formulas to HTML with MathML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/polarwinkel/mdtex2html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
