[metadata]
name = mdtex2html
version = 1.3.1
author = Dirk Winkel
author_email = it@polarwinkel.de
description = library to convert Markdown with included LaTeX-Formulas to HTML with MathML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/polarwinkel/mdtex2html
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Text Processing :: Markup :: Markdown
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
[options]
packages = find:
python_requires = >=3.7
